--- a/crystal-game/res/layout/activity_main.xml
+++ b/crystal-game/res/layout/activity_main.xml
@@ -14,16 +14,23 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
-    <Button
-        android:id="@+id/button1"
+    <EditText
+        android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginLeft="47dp"
-        android:layout_marginTop="34dp"
-        android:text="Button"
+        android:layout_marginTop="40dp"
+        android:ems="10" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editText1"
+        android:layout_alignTop="@+id/editText1"
+        android:layout_toRightOf="@+id/editText1"
         android:onClick="sendTestMessage"
-         />
+        android:text="Send" />
 
 </RelativeLayout>
