--- a/crystal-game/res/menu/main.xml
+++ b/crystal-game/res/menu/main.xml
@@ -3,7 +3,10 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="never|ifRoom"
+        android:title="@string/action_settings" 
+        android:onClick="showSettings"
+        android:icon="@drawable/ic_action_settings"
+        />
 
 </menu>
