--- a/crystal-game/res/layout/activity_main.xml
+++ b/crystal-game/res/layout/activity_main.xml
@@ -72,4 +72,33 @@
         android:onClick="leaveGroup"
         android:text="Leave" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button1"
+        android:onClick="sendMulticast"
+        android:text="Multicast" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/button4"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_toRightOf="@+id/button4"
+        android:onClick="sendUnicast"
+        android:text="Unicast" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="24dp"
+        android:onClick="getMembers"
+        android:text="Get member list" />
+
 </RelativeLayout>
