Add Group and Game instruction passing

--- a/crystal-game/res/layout/activity_create_game.xml
+++ b/crystal-game/res/layout/activity_create_game.xml
@@ -1,78 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/PlayerIDLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Player ID" />
-
-    <EditText
-        android:id="@+id/PlayerID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:enabled="false">
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/GroupIDLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Group ID" />
-
-    <EditText
-        android:id="@+id/GroupID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" 
-        android:enabled="false"/>
-
-    <Button
-        android:id="@+id/btnGameLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Game Location" />
-
-    <TextView
-        android:id="@+id/GameStartTimeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Game Start Time" />
-
-    <EditText
-        android:id="@+id/GameStartTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/GameDurationLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Game Duration" />
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/GameDuration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:hint="Game name" />
 
     <Button
-        android:id="@+id/btnSubmitCreateGame"
+        android:id="@+id/btnGameLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/GameDuration"
+        android:layout_marginTop="16dp"
+        android:text="Game Location" />
 
     <Button
         android:id="@+id/btnResetCreateGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btnGameLocation"
+        android:layout_marginTop="16dp"
         android:text="Reset" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btnSubmitCreateGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnResetCreateGame"
+        android:layout_alignBottom="@+id/btnResetCreateGame"
+        android:layout_alignParentRight="true"
+        android:text="Submit" />
+
+</RelativeLayout>
