--- a/crystal-game/res/layout/activity_main.xml
+++ b/crystal-game/res/layout/activity_main.xml
@@ -101,4 +101,14 @@
         android:onClick="getMembers"
         android:text="Get member list" />
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button6"
+        android:layout_below="@+id/button6"
+        android:layout_marginTop="19dp"
+        android:onClick="requestGameStart"
+        android:text="Request game start" />
+
 </RelativeLayout>
