--- a/crystal-game/res/values/styles.xml
+++ b/crystal-game/res/values/styles.xml
@@ -16,5 +16,18 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="InformationPanelButton">  
+	    <item name="android:textSize">12.0dip</item>  
+	    <item name="android:gravity">center_horizontal</item>  
+	    <item name="android:background">@drawable/bg_info_panel</item>  
+	    <item name="android:layout_width">fill_parent</item>  
+	    <item name="android:layout_height">wrap_content</item>  
+	    <item name="android:button">@null</item>  
+	    <item name="android:textColor">@color/white</item>  
+	    <item name="android:layout_weight">1.0</item>  
+	    <item name="android:paddingBottom">2.0dip</item>  
+	    <item name="android:paddingTop">2.0dip</item>  
+	</style>
 
 </resources>
