--- a/crystal-game/res/layout/activity_data_warehouse_test.xml
+++ b/crystal-game/res/layout/activity_data_warehouse_test.xml
@@ -18,7 +18,7 @@
         android:ems="10" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText2"
@@ -27,10 +27,10 @@
         android:text="Save" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
+        android:layout_alignLeft="@+id/button_create"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button2"
@@ -42,8 +42,8 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
+        android:layout_alignBaseline="@+id/button_create"
+        android:layout_alignBottom="@+id/button_create"
         android:layout_alignRight="@+id/editText2"
         android:onClick="getText"
         android:text="Get" />
