--- a/crystal-game/res/layout/activity_main.xml
+++ b/crystal-game/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:ems="10" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText2"
@@ -38,12 +38,12 @@
         android:id="@+id/editText3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/group_name"
+        android:layout_below="@+id/group_name"
         android:ems="10" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText3"
@@ -56,9 +56,9 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_toRightOf="@+id/button1"
+        android:layout_alignBaseline="@+id/button_create"
+        android:layout_alignBottom="@+id/button_create"
+        android:layout_toRightOf="@+id/button_create"
         android:onClick="joinGroup"
         android:text="Join" />
 
@@ -76,8 +76,8 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_below="@+id/button1"
+        android:layout_alignLeft="@+id/button_create"
+        android:layout_below="@+id/button_create"
         android:onClick="sendMulticast"
         android:text="Multicast" />
 
