--- a/crystal-game/res/layout/activity_main.xml
+++ b/crystal-game/res/layout/activity_main.xml
@@ -97,7 +97,6 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button4"
         android:layout_below="@+id/button4"
-        android:layout_marginTop="24dp"
         android:onClick="getMembers"
         android:text="Get member list" />
 
@@ -105,20 +104,10 @@
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button6"
+        android:layout_alignRight="@+id/button5"
         android:layout_below="@+id/button6"
-        android:layout_marginTop="19dp"
         android:onClick="requestGameStart"
         android:text="Request game start" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="13dp"
-        android:onClick="launchDWTest"
-        android:text="DWTest" />
 
 </RelativeLayout>
