--- a/crystal-game/res/menu/group_lobby.xml
+++ b/crystal-game/res/menu/group_lobby.xml
@@ -1,5 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    
+    <item
+        android:id="@+id/action_dw_test"
+        android:orderInCategory="100"
+        android:showAsAction="never|ifRoom"
+        android:title="DW" 
+        android:onClick="launchDW"
+        />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
