Update create group to include Game boundary selection button

--- a/crystal-game/res/layout/activity_group_lobby.xml
+++ b/crystal-game/res/layout/activity_group_lobby.xml
@@ -6,7 +6,7 @@
     tools:context=".GroupLobbyActivity" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/boundary_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
