Add game restoration

--- a/crystal-game/res/menu/group_lobby.xml
+++ b/crystal-game/res/menu/group_lobby.xml
@@ -9,9 +9,9 @@
         android:onClick="launchDW"
         />
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_leave_group"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_leave_group"/>
 
 </menu>
