Handle game end

--- a/crystal-game/res/layout/activity_create_game.xml
+++ b/crystal-game/res/layout/activity_create_game.xml
@@ -15,13 +15,35 @@
         android:hint="Game name" />
 
     <Button
-        android:id="@+id/game_location"
+        android:id="@+id/btnSubmitCreateGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnResetCreateGame"
+        android:layout_alignBottom="@+id/btnResetCreateGame"
+        android:layout_alignParentRight="true"
+        android:onClick="createGame"
+        android:text="Create" />
+
+    <EditText
+        android:id="@+id/game_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/game_name"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:hint="@string/game_length"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/game_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/game_length"
+        android:layout_marginTop="20dp"
         android:onClick="selectLocations"
         android:text="Game Location" />
 
@@ -31,18 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/game_location"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:onClick="resetLocations"
         android:text="Reset" />
-
-    <Button
-        android:id="@+id/btnSubmitCreateGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnResetCreateGame"
-        android:layout_alignBottom="@+id/btnResetCreateGame"
-        android:layout_alignParentRight="true"
-        android:onClick="createGame"
-        android:text="Create" />
 
 </RelativeLayout>
