--- a/crystal-game/res/layout/activity_game_end.xml
+++ b/crystal-game/res/layout/activity_game_end.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:onClick="goToLobby"
         android:text="@string/go_to_lobby" />
 
 </RelativeLayout>
