--- a/crystal-game/res/layout/activity_game.xml
+++ b/crystal-game/res/layout/activity_game.xml
@@ -60,6 +60,7 @@
 
             <TextView
                 android:id="@+id/Energy_message"
+                android:padding="5dip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
@@ -73,6 +74,7 @@
                 android:visibility="gone" />
              <TextView
                 android:id="@+id/Crystal_message"
+                android:padding="5dip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
@@ -87,6 +89,7 @@
              
                <TextView
                 android:id="@+id/Magic_message"
+                android:padding="5dip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|top"
@@ -98,7 +101,21 @@
                 android:textColor="#ffffff"
                 android:textSize="10sp"
                 android:visibility="gone" />
-            
+               
+               <TextView
+                android:id="@+id/Time_message"
+                android:padding="5dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginLeft="135dip"
+                android:layout_marginTop="1dip"
+                android:background="@drawable/tips"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="#ffffff"
+                android:textSize="10sp"
+                android:visibility="gone" />
         </FrameLayout>
 
 </LinearLayout>
