--- a/crystal-game/res/layout/activity_game.xml
+++ b/crystal-game/res/layout/activity_game.xml
@@ -112,10 +112,10 @@
                 android:layout_marginTop="1dip"
                 android:background="@drawable/tips"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:text="1"
                 android:textColor="#ffffff"
-                android:textSize="10sp"
-                android:visibility="gone" />
+                android:textSize="10sp" />
         </FrameLayout>
 
 </LinearLayout>
