--- a/crystal-game/res/menu/game.xml
+++ b/crystal-game/res/menu/game.xml
@@ -6,5 +6,8 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_leave_group"/>
-
+	<group android:checkableBehavior="all">
+        <item android:id="@+id/debug" android:titleCondensed="Holo Points" android:title="Show Holo Points">
+        </item>
+    </group>
 </menu>
